@@ -65,16 +65,16 @@ void          nautilus_progress_info_start           (NautilusProgressInfo *info
 void          nautilus_progress_info_finish          (NautilusProgressInfo *info);
 void          nautilus_progress_info_set_status      (NautilusProgressInfo *info,
 						      const char           *status);
-void          nautilus_progress_info_set_status_printf (NautilusProgressInfo *info,
-							const char           *format,
-							...);
+void          nautilus_progress_info_take_status     (NautilusProgressInfo *info,
+						      char                 *status);
 void          nautilus_progress_info_set_details     (NautilusProgressInfo *info,
 						      const char           *details);
-void          nautilus_progress_info_set_details_printf (NautilusProgressInfo *info,
-							 const char           *format,
-							 ...);
+void          nautilus_progress_info_take_details    (NautilusProgressInfo *info,
+						      char                 *details);
 void          nautilus_progress_info_set_progress    (NautilusProgressInfo *info,
 						      gboolean              activity_mode,
 						      double                current_percent);
+
+
 
 #endif /* NAUTILUS_PROGRESS_INFO_H */
